--- a/booklist/src/index.css
+++ b/booklist/src/index.css
@@ -29,6 +29,8 @@ body {
   border-radius: 1rem;
   padding: 2rem;
   text-align: center;
+
+  position: relative;
 }
 .book img {
   width: 100%;
@@ -44,4 +46,21 @@ body {
   font-size: '0.75rem';
   margin-top: '0.5rem';
   letter-spacing: 2px;
+}
+
+.number {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.75rem;
+  font-size: 1rem;
+  border-top-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  background: #c35600;
+  color: #fff;
+}
+
+.title {
+  padding: 1rem;
+  text-align: center;
 }
